--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,18 +165,22 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2023.11.04-18.15.48
-Hunt_for_blood.LastCompileMethod=Unknown
+Hunt_for_blood.TimeStamp=2023.11.04-19.13.51
+Hunt_for_blood.LastCompileMethod=External
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Enemy/BP_Spawner.BP_Spawner
+OpenAssetsAtExit=/Game/Animation/Esquivar.Esquivar
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Animation/SK_Mannequin_Sequence.SK_Mannequin_Sequence
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Animation/SK_Mannequin_Sequence
-MRUItem1=/Game/Animation/StandToRoll_UE
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem2=/Game/Animation/StandToRoll_UE
+MRUItem3=/Game/Enemy/BP_Spawner
+MRUItem4=/Game/Animation/SK_Mannequin_Sequence
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -251,9 +255,75 @@ AnimSequence.CustomAttributes=True
 AnimSequence.Animation Model=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.Foliage=True
+WorldSettings.Landscape=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+WorldSettings.Networking=True
+BP_Spawner_C.Default=True
+BP_Spawner_C.Tick=True
+BP_Spawner_C.Replication=True
+BP_Spawner_C.Rendering=True
+BP_Spawner_C.Collision=True
+BP_Spawner_C.Actor=True
+BP_Spawner_C.Input=True
+BP_Spawner_C.HLOD=True
+BP_Spawner_C.Physics=True
+BP_Spawner_C.WorldPartition=True
+BP_Spawner_C.Events=True
+AnimMontage.Animation=True
+AnimMontage.BlendOption=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.Animation Model=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
+Hunt_For_Blood_C.Tick=True
+Hunt_For_Blood_C.Classes=True
+Hunt_For_Blood_C.Game=True
+Hunt_For_Blood_C.GameMode=True
+Hunt_For_Blood_C.Physics=True
+Hunt_For_Blood_C.Events=True
 
 [DetailPropertyExpansion]
-PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+PersonaPreviewSceneDescription="\"Object\" "
+AssetViewerSettings="\"Object\" "
+AnimSequence="\"Object\" "
+AnimSequenceBase="\"Object\" "
+AnimationAsset="\"Object\" "
+AnimMontage="\"Object\" "
+AnimCompositeBase="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+SpringArmComponent="\"Object\" "
+
+[MRU]
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+
+[MessageLog]
+LastLogListing=PIE
+
+[DetailCategoriesAdvanced]
+AnimSequence.Animation=True
+AnimMontage.Animation=True
 
