UI de vida y stamina, mejora del GameMode

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -61,7 +61,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=150)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -96,6 +96,9 @@ LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=1282
+NewWindowHeight=730
+MultipleInstancePositions=(X=320,Y=150)
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1244,7 +1247,6 @@ MegascansPlugin.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood
 
@@ -1272,21 +1274,21 @@ MRUItem17=/Game/Animation/SK_Mannequin_Sequence
 BP_ThirdPersonCharacter_C.TransformCommon=True
 BP_ThirdPersonCharacter_C.Animation=True
 BP_ThirdPersonCharacter_C.Mesh=True
-BP_ThirdPersonCharacter_C.CameraSettings=True
-BP_ThirdPersonCharacter_C.CameraOptions=True
+BP_ThirdPersonCharacter_C.CameraSettings=False
+BP_ThirdPersonCharacter_C.CameraOptions=False
 BP_ThirdPersonCharacter_C.Default=True
 BP_ThirdPersonCharacter_C.Tick=True
-BP_ThirdPersonCharacter_C.Camera=True
-BP_ThirdPersonCharacter_C.CameraCollision=True
+BP_ThirdPersonCharacter_C.Camera=False
+BP_ThirdPersonCharacter_C.CameraCollision=False
 BP_ThirdPersonCharacter_C.ComponentTick=True
-BP_ThirdPersonCharacter_C.Lag=True
-BP_ThirdPersonCharacter_C.Physics=True
-BP_ThirdPersonCharacter_C.Collision=True
-BP_ThirdPersonCharacter_C.Lighting=True
-BP_ThirdPersonCharacter_C.Tags=True
-BP_ThirdPersonCharacter_C.LOD=True
-BP_ThirdPersonCharacter_C.AssetUserData=True
-BP_ThirdPersonCharacter_C.SkinWeights=True
+BP_ThirdPersonCharacter_C.Lag=False
+BP_ThirdPersonCharacter_C.Physics=False
+BP_ThirdPersonCharacter_C.Collision=False
+BP_ThirdPersonCharacter_C.Lighting=False
+BP_ThirdPersonCharacter_C.Tags=False
+BP_ThirdPersonCharacter_C.LOD=False
+BP_ThirdPersonCharacter_C.AssetUserData=False
+BP_ThirdPersonCharacter_C.SkinWeights=False
 BP_ThirdPersonCharacter_C.Replication=True
 BP_ThirdPersonCharacter_C.ComponentReplication=True
 BP_ThirdPersonCharacter_C.Rendering=True
@@ -1955,6 +1957,75 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+PlayerState.Replication=True
+PlayerState.Physics=True
+PlayerState.Networking=True
+PlayerState.Actor=True
+PlayerController.Actor=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Input=True
+PlayerController.WorldPartition=True
+PlayerController.Replication=True
+PlayerController.HLOD=True
+PlayerController.Physics=True
+PlayerController.Networking=True
+PlayerStart.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.WorldPartition=True
+PlayerStart.Input=True
+BP_ThirdPersonCharacter_C.Networking=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+Hunt_For_Blood_C.TransformCommon=True
+Hunt_For_Blood_C.Networking=True
+ParticleEventManager.Rendering=True
+ParticleEventManager.Replication=True
+ParticleEventManager.Collision=True
+ParticleEventManager.HLOD=True
+ParticleEventManager.Physics=True
+ParticleEventManager.Networking=True
+ParticleEventManager.WorldPartition=True
+ParticleEventManager.Input=True
+ParticleEventManager.Actor=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Physics=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Collision=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Replication=True
+PlayerCameraManager.HLOD=True
+PlayerCameraManager.Networking=True
+PlayerCameraManager.WorldPartition=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2113,8 +2184,11 @@ PaperTileMapComponent="\"Object\" "
 PaperTileMap="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
+Visual="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
+ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
+UI_HuntForBlood_C="\"Object\" "
+UserWidget="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2125,6 +2199,7 @@ LastLogListing=PIE
 [DetailCategoriesAdvanced]
 AnimSequence.Animation=True
 AnimMontage.Animation=True
+BP_ThirdPersonCharacter_C.Animation=True
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2141,6 +2216,17 @@ BP_ThirdPersonCharacter_C=
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
+EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+CapsuleComponent=
+Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2198,7 +2284,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=()
+PerBlueprintSettings=(("/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood", (WatchedPins=((OwningNode="/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood:Get_Healt_Bar_FillColorAndOpacity.K2Node_CallFunction_24",PinId=F2A705C9403F74FE17577DAD62914426)))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
@@ -2405,7 +2491,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=134.400
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
