--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -96,8 +96,8 @@ LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1282
-NewWindowHeight=730
+NewWindowWidth=1286
+NewWindowHeight=750
 MultipleInstancePositions=(X=320,Y=150)
 
 [/Script/UnrealEd.PersonaOptions]
@@ -1244,31 +1244,36 @@ Bridge.TimeStamp=2023.10.07-16.05.37
 Bridge.LastCompileMethod=Unknown
 MegascansPlugin.TimeStamp=2023.10.07-16.05.44
 MegascansPlugin.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2023.10.07-13.13.32
+UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem3=/Game/AI/Punching_AI
-MRUItem4=/Game/Enemy/BP_EnemySpawn
-MRUItem5=/Game/AI/Walk
-MRUItem6=/Game/AI/Ai_anim_BP
-MRUItem7=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem8=/Game/AI/Punching
-MRUItem9=/Game/Animation/Rolling
-MRUItem10=/Game/Animation/Idle_UE
-MRUItem11=/Game/Animation/Stand_To_Roll__1__Skeleton
-MRUItem12=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem13=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem14=/Game/AI/NewBlendSpace
-MRUItem15=/Game/Enemy/BP_Spawner
-MRUItem16=/Game/Animation/StandToRoll_UE
-MRUItem17=/Game/Animation/SK_Mannequin_Sequence
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem1=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem4=/Game/AI/Punching_AI
+MRUItem5=/Game/Enemy/BP_EnemySpawn
+MRUItem6=/Game/AI/Walk
+MRUItem7=/Game/AI/Ai_anim_BP
+MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem9=/Game/AI/Punching
+MRUItem10=/Game/Animation/Rolling
+MRUItem11=/Game/Animation/Idle_UE
+MRUItem12=/Game/Animation/Stand_To_Roll__1__Skeleton
+MRUItem13=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem14=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem15=/Game/AI/NewBlendSpace
+MRUItem16=/Game/Enemy/BP_Spawner
+MRUItem17=/Game/Animation/StandToRoll_UE
+MRUItem18=/Game/Animation/SK_Mannequin_Sequence
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2026,6 +2031,32 @@ PlayerCameraManager.Networking=True
 PlayerCameraManager.WorldPartition=True
 PlayerCameraManager.Input=True
 PlayerCameraManager.Actor=True
+PropertyWrapper.Events=True
+BP_Stadistics_C.ComponentTick=True
+BP_Stadistics_C.Tags=True
+BP_Stadistics_C.ComponentReplication=True
+BP_Stadistics_C.Activation=True
+BP_Stadistics_C.Variable=True
+BP_Stadistics_C.Cooking=True
+K2Node_VariableSet.Events=True
+K2Node_InputDebugKey.Input=True
+K2Node_InputDebugKey.Modifier=True
+BP_Stadistics_C.Sockets=True
+BP_Stadistics_C.Vida=True
+BP_Stadistics_C.Stamina=True
+BP_Stadistics_C.Nivel=True
+BP_Stadistics_C.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2189,6 +2220,10 @@ Visual="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
 ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
 UI_HuntForBlood_C="\"Object\" "
 UserWidget="\"Object\" "
+BP_Stadistics_C="\"Object\" "
+K2Node_InputDebugKey="\"Object\" "
+TextBlock="\"Object\" "
+TextLayoutWidget="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2212,7 +2247,7 @@ Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_ThirdPersonCharacter_C=
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -2227,6 +2262,10 @@ PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CapsuleComponent=
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2243,6 +2282,7 @@ ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 /Game/AI/Punching_AI.Punching_AI=1
 /Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood=0
 /Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood=0
+/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2491,7 +2531,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=134.400
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2618,4 +2658,20 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
