Intento de hacer lo del ataque de sangrado

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,7 +216,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2023.11.04-19.13.51
+Hunt_for_blood.TimeStamp=2023.11.21-15.30.46
 Hunt_for_blood.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.10.07-13.13.29
 StorageServerClient.LastCompileMethod=External
@@ -1249,18 +1249,16 @@ UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
+OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem1=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem4=/Game/AI/Punching_AI
-MRUItem5=/Game/Enemy/BP_EnemySpawn
+MRUItem0=/Game/Enemy/BP_EnemySpawn
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem3=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem4=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem5=/Game/AI/Punching_AI
 MRUItem6=/Game/AI/Walk
 MRUItem7=/Game/AI/Ai_anim_BP
 MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Manny
@@ -2057,6 +2055,8 @@ TextBlock.Behavior=True
 TextBlock.Render Transform=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
+BP_ThirdPersonCharacter_C.Vida=True
+BP_ThirdPersonCharacter_C.Stamina=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2235,6 +2235,7 @@ LastLogListing=PIE
 AnimSequence.Animation=True
 AnimMontage.Animation=True
 BP_ThirdPersonCharacter_C.Animation=True
+PropertyWrapper.Variable=False
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2266,6 +2267,7 @@ BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2530,8 +2532,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=128.000 Y=134.400
-WindowSize=X=1284.800 Y=724.800
+ScreenPosition=X=128.000 Y=134.000
+WindowSize=X=1285.000 Y=725.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
