--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -216,7 +216,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2023.11.21-15.30.46
+Hunt_for_blood.TimeStamp=2023.11.28-13.18.31
 Hunt_for_blood.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.10.07-13.13.29
 StorageServerClient.LastCompileMethod=External
@@ -1248,7 +1248,7 @@ UATHelper.TimeStamp=2023.10.07-13.13.32
 UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
 
@@ -2268,6 +2268,7 @@ EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
