Quita vida al enemy por choques (depues lo hare con espada y eso )

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Enemy
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1248,30 +1248,31 @@ UATHelper.TimeStamp=2023.10.07-13.13.32
 UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
+OpenAssetsAtExit=/Game/Enemy/Enemy_Health.Enemy_Health
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/BP_EnemySpawn
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem3=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem4=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem5=/Game/AI/Punching_AI
-MRUItem6=/Game/AI/Walk
-MRUItem7=/Game/AI/Ai_anim_BP
-MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem9=/Game/AI/Punching
-MRUItem10=/Game/Animation/Rolling
-MRUItem11=/Game/Animation/Idle_UE
-MRUItem12=/Game/Animation/Stand_To_Roll__1__Skeleton
-MRUItem13=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem14=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem15=/Game/AI/NewBlendSpace
-MRUItem16=/Game/Enemy/BP_Spawner
-MRUItem17=/Game/Animation/StandToRoll_UE
-MRUItem18=/Game/Animation/SK_Mannequin_Sequence
+MRUItem0=/Game/Enemy/Enemy_Health
+MRUItem1=/Game/Enemy/BP_EnemySpawn
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem4=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem5=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem6=/Game/AI/Punching_AI
+MRUItem7=/Game/AI/Walk
+MRUItem8=/Game/AI/Ai_anim_BP
+MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem10=/Game/AI/Punching
+MRUItem11=/Game/Animation/Rolling
+MRUItem12=/Game/Animation/Idle_UE
+MRUItem13=/Game/Animation/Stand_To_Roll__1__Skeleton
+MRUItem14=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem15=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem16=/Game/AI/NewBlendSpace
+MRUItem17=/Game/Enemy/BP_Spawner
+MRUItem18=/Game/Animation/StandToRoll_UE
+MRUItem19=/Game/Animation/SK_Mannequin_Sequence
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2057,6 +2058,41 @@ TextBlock.Navigation=True
 TextBlock.Localization=True
 BP_ThirdPersonCharacter_C.Vida=True
 BP_ThirdPersonCharacter_C.Stamina=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.ComponentTick=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.HLOD=True
+WidgetComponent.Collision=True
+WidgetComponent.PathTracing=True
+WidgetComponent.Rendering=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.PathTracing=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2224,6 +2260,8 @@ BP_Stadistics_C="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 TextBlock="\"Object\" "
 TextLayoutWidget="\"Object\" "
+Enemy_Health_C="\"Object\" "
+WidgetComponent="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2260,7 +2298,7 @@ K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2269,6 +2307,10 @@ HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+Enemy_Health_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2286,6 +2328,7 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 /Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood=0
 /Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood=0
 /Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics=0
+/Game/Enemy/Enemy_Health.Enemy_Health=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2566,8 +2609,8 @@ Project=B:/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -2677,4 +2720,8 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[PluginBrowser]
+InstalledPlugins=VisualStudioTools
+InstalledPlugins=WMFCodecs
 
