--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1286,Y=750)
 LastExecutedLaunchDevice=Windows@DESKTOP-7NLLS83
 LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/AI
+ContentBrowserDrawer.SelectedPaths=/Game/Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -216,7 +216,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-Hunt_for_blood.TimeStamp=2023.11.28-13.18.31
+Hunt_for_blood.TimeStamp=2023.12.12-13.19.14
 Hunt_for_blood.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.10.07-13.13.29
 StorageServerClient.LastCompileMethod=External
@@ -1246,6 +1246,8 @@ MegascansPlugin.TimeStamp=2023.10.07-16.05.44
 MegascansPlugin.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2023.10.07-13.13.32
 UATHelper.LastCompileMethod=Unknown
+D3D11RHI.TimeStamp=2023.05.18-10.23.38
+D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1254,25 +1256,25 @@ OpenAssetsAtExit=/Game/Enemy/Enemy_Health.Enemy_Health
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Enemy/Enemy_Health
-MRUItem1=/Game/Enemy/BP_EnemySpawn
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem4=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem5=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem6=/Game/AI/Punching_AI
-MRUItem7=/Game/AI/Walk
-MRUItem8=/Game/AI/Ai_anim_BP
-MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem10=/Game/AI/Punching
-MRUItem11=/Game/Animation/Rolling
-MRUItem12=/Game/Animation/Idle_UE
-MRUItem13=/Game/Animation/Stand_To_Roll__1__Skeleton
-MRUItem14=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem15=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem16=/Game/AI/NewBlendSpace
-MRUItem17=/Game/Enemy/BP_Spawner
-MRUItem18=/Game/Animation/StandToRoll_UE
-MRUItem19=/Game/Animation/SK_Mannequin_Sequence
+MRUItem1=/Game/Enemy/Flying_Back_Death
+MRUItem2=/Game/Enemy/BP_EnemySpawn
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem5=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem6=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem7=/Game/AI/Punching_AI
+MRUItem8=/Game/AI/Walk
+MRUItem9=/Game/AI/Ai_anim_BP
+MRUItem10=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem11=/Game/AI/Punching
+MRUItem12=/Game/Animation/Rolling
+MRUItem13=/Game/Animation/Idle_UE
+MRUItem14=/Game/Animation/Stand_To_Roll__1__Skeleton
+MRUItem15=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem16=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem17=/Game/AI/NewBlendSpace
+MRUItem18=/Game/Enemy/BP_Spawner
+MRUItem19=/Game/Animation/StandToRoll_UE
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -1921,7 +1923,7 @@ AnimGraphNode_Slot.Functions=True
 AnimGraphNode_Slot.Tag=True
 FbxImportUI.Mesh=True
 FbxImportUI.Animation=True
-FbxImportUI.Transform=True
+FbxImportUI.Transform=False
 FbxImportUI.Miscellaneous=True
 FbxImportUI.FbxFileInformation=True
 EditorCompositeSection.Section=True
@@ -2093,6 +2095,20 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
+Enemy_Health_C.Default=True
+Enemy_Health_C.Appearance=True
+Enemy_Health_C.Input=True
+Enemy_Health_C.Interaction=True
+Enemy_Health_C.Designer=True
+Enemy_Health_C.Performance=True
+Enemy_Health_C.Layout=True
+Enemy_Health_C.Behavior=True
+Enemy_Health_C.Render Transform=True
+Enemy_Health_C.Localization=True
+Enemy_Health_C.Accessibility=True
+Enemy_Health_C.Clipping=True
+Enemy_Health_C.Navigation=True
+BP_EnemySpawn_C.Networking=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2251,8 +2267,8 @@ PaperTileMapComponent="\"Object\" "
 PaperTileMap="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
-Visual="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
 UI_HuntForBlood_C="\"Object\" "
 UserWidget="\"Object\" "
@@ -2267,7 +2283,7 @@ WidgetComponent="\"Object\" "
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [DetailCategoriesAdvanced]
 AnimSequence.Animation=True
@@ -2298,7 +2314,7 @@ K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+CapsuleComponent=
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2307,7 +2323,7 @@ HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-Enemy_Health_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+Enemy_Health_C=
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2376,6 +2392,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/NavigationSystem.NavSystemConfigOverride;
 
@@ -2527,7 +2544,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=4
+PreviewFeatureLevel=3
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -2576,9 +2593,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=128.000 Y=134.000
+ScreenPosition=X=197.000 Y=171.000
 WindowSize=X=1285.000 Y=725.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2609,8 +2626,8 @@ Project=B:/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Common=False
