Implementacion de la regeneracion de vida y estamina, retoque escena
He hecho un pequeño cambio a la escena para que no se vea todo  rato lo mismo, ademas implemente ya la variable de regeneracion de vida, asi el jugador luego recuperara vida y estamina, al igual que decir que el bloqueo y esquive cuesten estamina

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1286,Y=750)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-7NLLS83
 LastExecutedLaunchName=DESKTOP-7NLLS83
 LastExecutedPIEPreviewDevice=
@@ -143,7 +143,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Enemy
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Enemy
+ContentBrowserDrawer.SelectedPaths=
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1251,30 +1251,34 @@ D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
+OpenAssetsAtExit=/Game/Enemy/BP_TankEnemySpawn.BP_TankEnemySpawn
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
+OpenAssetsAtExit=/Game/Enemy/BP_Spawner.BP_Spawner
 OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
-OpenAssetsAtExit=/Game/Enemy/Enemy_Health.Enemy_Health
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/Enemy_Health
-MRUItem1=/Game/Enemy/Flying_Back_Death
-MRUItem2=/Game/Enemy/BP_EnemySpawn
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem1=/Game/Enemy/BP_EnemySpawn
+MRUItem2=/Game/Enemy/BP_Spawner
+MRUItem3=/Game/Enemy/BP_TankEnemySpawn
 MRUItem4=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem5=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem6=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem7=/Game/AI/Punching_AI
-MRUItem8=/Game/AI/Walk
-MRUItem9=/Game/AI/Ai_anim_BP
-MRUItem10=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem11=/Game/AI/Punching
-MRUItem12=/Game/Animation/Rolling
-MRUItem13=/Game/Animation/Idle_UE
-MRUItem14=/Game/Animation/Stand_To_Roll__1__Skeleton
-MRUItem15=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem16=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem17=/Game/AI/NewBlendSpace
-MRUItem18=/Game/Enemy/BP_Spawner
-MRUItem19=/Game/Animation/StandToRoll_UE
+MRUItem5=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/Enemy/Enemy_Health
+MRUItem8=/Game/Enemy/Flying_Back_Death
+MRUItem9=/Game/AI/Punching_AI
+MRUItem10=/Game/AI/Walk
+MRUItem11=/Game/AI/Ai_anim_BP
+MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem13=/Game/AI/Punching
+MRUItem14=/Game/Animation/Rolling
+MRUItem15=/Game/Animation/Idle_UE
+MRUItem16=/Game/Animation/Stand_To_Roll__1__Skeleton
+MRUItem17=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem18=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem19=/Game/AI/NewBlendSpace
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2109,6 +2113,124 @@ Enemy_Health_C.Accessibility=True
 Enemy_Health_C.Clipping=True
 Enemy_Health_C.Navigation=True
 BP_EnemySpawn_C.Networking=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+BP_TankEnemySpawn_C.TransformCommon=True
+BP_TankEnemySpawn_C.Animation=True
+BP_TankEnemySpawn_C.Mesh=True
+BP_TankEnemySpawn_C.Tick=True
+BP_TankEnemySpawn_C.ComponentTick=True
+BP_TankEnemySpawn_C.Clothing=True
+BP_TankEnemySpawn_C.LeaderPoseComponent=True
+BP_TankEnemySpawn_C.Physics=True
+BP_TankEnemySpawn_C.Collision=True
+BP_TankEnemySpawn_C.AnimationRig=True
+BP_TankEnemySpawn_C.Lighting=True
+BP_TankEnemySpawn_C.Deformer=True
+BP_TankEnemySpawn_C.SkinWeights=True
+BP_TankEnemySpawn_C.HLOD=True
+BP_TankEnemySpawn_C.Rendering=True
+BP_TankEnemySpawn_C.PathTracing=True
+BP_TankEnemySpawn_C.Mobile=True
+BP_TankEnemySpawn_C.Navigation=True
+BP_TankEnemySpawn_C.RayTracing=True
+BP_TankEnemySpawn_C.VirtualTexture=True
+BP_TankEnemySpawn_C.Tags=True
+BP_TankEnemySpawn_C.AssetUserData=True
+BP_TankEnemySpawn_C.Replication=True
+BP_TankEnemySpawn_C.ComponentReplication=True
+BP_TankEnemySpawn_C.Activation=True
+BP_TankEnemySpawn_C.Variable=True
+BP_TankEnemySpawn_C.Cooking=True
+BP_TankEnemySpawn_C.Character Movement (General Settings)=True
+BP_TankEnemySpawn_C.Character Movement: Walking=True
+BP_TankEnemySpawn_C.Character Movement: Jumping / Falling=True
+BP_TankEnemySpawn_C.Character Movement (Networking)=True
+BP_TankEnemySpawn_C.Character Movement: Swimming=True
+BP_TankEnemySpawn_C.Character Movement: Flying=True
+BP_TankEnemySpawn_C.Character Movement: Custom Movement=True
+BP_TankEnemySpawn_C.Character Movement (Rotation Settings)=True
+BP_TankEnemySpawn_C.Character Movement: Physics Interaction=True
+BP_TankEnemySpawn_C.Character Movement=True
+BP_TankEnemySpawn_C.Character Movement: Avoidance=True
+BP_TankEnemySpawn_C.RootMotion=True
+BP_TankEnemySpawn_C.Character Movement: NavMesh Movement=True
+BP_TankEnemySpawn_C.NavMovement=True
+BP_TankEnemySpawn_C.Velocity=True
+BP_TankEnemySpawn_C.PlanarMovement=True
+BP_TankEnemySpawn_C.MovementComponent=True
+BP_TankEnemySpawn_C.Shape=True
+BP_TankEnemySpawn_C.Character=True
+BP_TankEnemySpawn_C.Camera=True
+BP_TankEnemySpawn_C.Pawn=True
+BP_TankEnemySpawn_C.Actor=True
+BP_TankEnemySpawn_C.Input=True
+BP_TankEnemySpawn_C.WorldPartition=True
+BP_TankEnemySpawn_C.Events=True
+BP_TankEnemySpawn_C.Materials=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.PathTracing=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.HLOD=True
+TextRenderActor.PathTracing=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Physics=True
+TextRenderActor.Networking=True
+TextRenderActor.WorldPartition=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+UI_HuntForBlood_C.Appearance=True
+UI_HuntForBlood_C.Input=True
+UI_HuntForBlood_C.Interaction=True
+UI_HuntForBlood_C.Designer=True
+UI_HuntForBlood_C.Performance=True
+UI_HuntForBlood_C.Layout=True
+UI_HuntForBlood_C.Behavior=True
+UI_HuntForBlood_C.Render Transform=True
+UI_HuntForBlood_C.Localization=True
+UI_HuntForBlood_C.Accessibility=True
+UI_HuntForBlood_C.Clipping=True
+UI_HuntForBlood_C.Navigation=True
+BP_Stadistics_C.Default=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2278,12 +2400,14 @@ TextBlock="\"Object\" "
 TextLayoutWidget="\"Object\" "
 Enemy_Health_C="\"Object\" "
 WidgetComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
+BoxComponent="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 AnimSequence.Animation=True
@@ -2293,7 +2417,7 @@ PropertyWrapper.Variable=False
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_Spawner_C=
+BP_Spawner_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
@@ -2301,7 +2425,7 @@ Ai_anim_BP_C=
 Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+SkeletalMeshComponent=
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2314,10 +2438,10 @@ K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BP_Stadistics_C=
 EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2327,6 +2451,10 @@ Enemy_Health_C=
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BP_TankEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+Chekpoint_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2345,6 +2473,7 @@ Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 /Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood=0
 /Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics=0
 /Game/Enemy/Enemy_Health.Enemy_Health=0
+/Game/Enemy/BP_TankEnemySpawn.BP_TankEnemySpawn=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2544,7 +2673,7 @@ bAlwaysBuildUAT=True
 SCSViewportCameraSpeed=4
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
-PreviewFeatureLevel=3
+PreviewFeatureLevel=4
 PreviewPlatformName=None
 PreviewShaderFormatName=None
 PreviewShaderPlatformName=None
@@ -2593,9 +2722,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=197.000 Y=171.000
-WindowSize=X=1285.000 Y=725.000
-InitiallyMaximized=False
+ScreenPosition=X=196.800 Y=170.400
+WindowSize=X=1286.400 Y=726.400
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2741,4 +2870,7 @@ bSCCUseGlobalSettings=False
 [PluginBrowser]
 InstalledPlugins=VisualStudioTools
 InstalledPlugins=WMFCodecs
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
