Intento de mejora del UI, lino quiero hablar contigo

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1255,30 +1255,30 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPe
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
 OpenAssetsAtExit=/Game/Enemy/BP_TankEnemySpawn.BP_TankEnemySpawn
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
-OpenAssetsAtExit=/Game/Enemy/BP_Spawner.BP_Spawner
 OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
+OpenAssetsAtExit=/Game/Chekpoint/Chekpoint.Chekpoint
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem0=/Game/Chekpoint/Chekpoint
 MRUItem1=/Game/Enemy/BP_EnemySpawn
 MRUItem2=/Game/Enemy/BP_Spawner
-MRUItem3=/Game/Enemy/BP_TankEnemySpawn
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem4=/Game/Enemy/BP_TankEnemySpawn
 MRUItem5=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
 MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/Enemy/Enemy_Health
-MRUItem8=/Game/Enemy/Flying_Back_Death
-MRUItem9=/Game/AI/Punching_AI
-MRUItem10=/Game/AI/Walk
-MRUItem11=/Game/AI/Ai_anim_BP
-MRUItem12=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem13=/Game/AI/Punching
-MRUItem14=/Game/Animation/Rolling
-MRUItem15=/Game/Animation/Idle_UE
-MRUItem16=/Game/Animation/Stand_To_Roll__1__Skeleton
-MRUItem17=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem18=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem19=/Game/AI/NewBlendSpace
+MRUItem7=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem8=/Game/Enemy/Enemy_Health
+MRUItem9=/Game/Enemy/Flying_Back_Death
+MRUItem10=/Game/AI/Punching_AI
+MRUItem11=/Game/AI/Walk
+MRUItem12=/Game/AI/Ai_anim_BP
+MRUItem13=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem14=/Game/AI/Punching
+MRUItem15=/Game/Animation/Rolling
+MRUItem16=/Game/Animation/Idle_UE
+MRUItem17=/Game/Animation/Stand_To_Roll__1__Skeleton
+MRUItem18=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem19=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2231,6 +2231,23 @@ UI_HuntForBlood_C.Accessibility=True
 UI_HuntForBlood_C.Clipping=True
 UI_HuntForBlood_C.Navigation=True
 BP_Stadistics_C.Default=True
+Chekpoint_C.Tick=True
+Chekpoint_C.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.PathTracing=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2402,6 +2419,7 @@ Enemy_Health_C="\"Object\" "
 WidgetComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
 BoxComponent="\"Object\" "
+SphereComponent="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2426,7 +2444,7 @@ Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SkeletalMeshComponent=
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BP_ThirdPersonCharacter_C=
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
@@ -2441,7 +2459,7 @@ PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_Stadistics_C=
+BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2474,6 +2492,7 @@ K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 /Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics=0
 /Game/Enemy/Enemy_Health.Enemy_Health=0
 /Game/Enemy/BP_TankEnemySpawn.BP_TankEnemySpawn=0
+/Game/Chekpoint/Chekpoint.Chekpoint=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2722,8 +2741,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=196.800 Y=170.400
-WindowSize=X=1286.400 Y=726.400
+ScreenPosition=X=196.800 Y=83.200
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2873,4 +2892,7 @@ InstalledPlugins=WMFCodecs
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
